error.log
10 errors
./Heap/Heap.1.java:1: error: class Heap is public, should be declared in a file named Heap.java
public class Heap<T extends Comparable<T>> {
       ^
Note: ./Heap/Heap.1.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
./Heap/HeapGenric.java:1: error: class Heap is public, should be declared in a file named Heap.java
public class Heap<T extends Comparable<T>> {
       ^
Note: ./Heap/HeapGenric.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
./Introduction/Introduction.java:726: error: cannot find symbol
		printf("%d ", ackermann(3, 6));
		^
  symbol:   method printf(String,int)
  location: class Introduction
1 error
./Design/parkingLot.java:5: error: <identifier> expected
    public boolean reserveSpace(Space)
                                     ^
./Design/parkingLot.java:13: error: <identifier> expected
	public int unreserveSpace(Space)
	                               ^
2 errors
./Design/system.java:2: error: cannot find symbol
    private map<int, int> personIdToMachineIdMap;
            ^
  symbol:   class map
  location: class system
./Design/system.java:2: error: unexpected type
    private map<int, int> personIdToMachineIdMap;
                ^
  required: reference
  found:    int
./Design/system.java:2: error: unexpected type
    private map<int, int> personIdToMachineIdMap;
                     ^
  required: reference
  found:    int
./Design/system.java:3: error: cannot find symbol
    private map<int, Machine> machineIdToMachineMap;
            ^
  symbol:   class map
  location: class system
./Design/system.java:3: error: cannot find symbol
    private map<int, Machine> machineIdToMachineMap;
                     ^
  symbol:   class Machine
  location: class system
./Design/system.java:3: error: unexpected type
    private map<int, Machine> machineIdToMachineMap;
                ^
  required: reference
  found:    int
./Design/system.java:5: error: cannot find symbol
    Machine getMachine(int machineId);
    ^
  symbol:   class Machine
  location: class system
./Design/system.java:7: error: cannot find symbol
    Person getPerson(int personId) {
    ^
  symbol:   class Person
  location: class system
./Design/system.java:5: error: missing method body, or declare abstract
    Machine getMachine(int machineId);
            ^
./Design/system.java:9: error: cannot find symbol
        Machine m = machineIdToMachineMap[machineId];
        ^
  symbol:   class Machine
  location: class system
10 errors
./Heap/Heap.1.java:1: error: class Heap is public, should be declared in a file named Heap.java
public class Heap<T extends Comparable<T>> {
       ^
Note: ./Heap/Heap.1.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
./Heap/HeapEx.java:288: error: method main1 in class HeapEx cannot be applied to given types;
		main1();
		^
  required: String[]
  found:    no arguments
  reason: actual and formal argument lists differ in length
1 error
./Heap/HeapGenric.java:1: error: class Heap is public, should be declared in a file named Heap.java
public class Heap<T extends Comparable<T>> {
       ^
Note: ./Heap/HeapGenric.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
./Stack/StackExercise.java:1053: error: cannot find symbol
		main21();
		^
  symbol:   method main21()
  location: class StackExercise
./Stack/StackExercise.java:1054: error: cannot find symbol
		main22();
		^
  symbol:   method main22()
  location: class StackExercise
./Stack/StackExercise.java:1055: error: cannot find symbol
		main23();
		^
  symbol:   method main23()
  location: class StackExercise
./Stack/StackExercise.java:1056: error: cannot find symbol
		main24();
		^
  symbol:   method main24()
  location: class StackExercise
4 errors
./String/StringEx.java:393: error: cannot find symbol
		main1();
		^
  symbol:   method main1()
  location: class StringEx
1 error
